--- a/app/index.html
+++ b/app/index.html
@@ -56,10 +56,11 @@
     </footer>
 
     <!-- Your web-app is https, so your scripts need to be too -->
+    <!--currently works without jquery  see how this goes
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
             crossorigin="anonymous"></script>
-  <!--  <script src="/client.js"></script>-->
+  -->
 <script type="text/javascript" src="/bundle.js"></script>
   </body>
 </html>
